# aquarius

./: .gitignore  .gitmodules  INPUT_HOWTO  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  config.mk.bgq  config.mk.template  configure  configure.ac  input_schema  rules.mk
basis/: 3-21++G  3-21++G*  3-21G  3-21G*  3-21GSP  4-22GSP  4-31G  6-31++G  6-31++G*  6-31++G**  6-31+G*  6-311++G(2d,2p)  6-311++G(3df,3pd)  6-311++G**  6-311+G*  6-311G  6-311G(2df,2pd)  6-311G*  6-311G**  6-31G  6-31G(3df,3pd)  6-31G*  6-31G**  6-31G*-Bladeau  6-31G-Bladeau  ANO-RCC  Alrichs Coulomb Fitting  Alrichs TZV  Alrichs VDZ  Alrichs VTZ  Alrichs pVDZ  Bauschlicher ANO  Binning_Curtis SV  Binning_Curtis SVP  Binning_Curtis VTZ  Binning_Curtis VTZP  CRENBL ECP  CRENBS ECP  CVTZ  Chipman DZP + Diffuse  (+316 more)
desc/: schemas
m4/: aq_with_package.m4  ax_prog_cc_mpi.m4  ax_prog_f77_mpi.m4  ax_prog_fc_mpi.m4
mkfiles/: config.mk.bgp  config.mk.bgq  config.mk.linux  config.mk.nersc
src/: Makefile
src/agora/fock_builder/: ao.hpp
src/agora/integrals/: integrals.cxx  integrals.hpp
src/autocc/: Makefile  autocc.cxx  autocc.hpp  diagram.cxx  diagram.hpp  fraction.cxx  fraction.hpp  fragment.cxx  fragment.hpp  generator.cxx  generator.hpp  line.cxx  line.hpp  operator.cxx  operator.hpp  spinorbital.cxx  spinorbital.hpp  term.cxx  term.hpp
src/bench/: Makefile  ao-ccsd-lambda.cxx  ao-ccsd.cxx  ao-ccsdt.cxx  cholesky-ccsd-lambda.cxx  cholesky-ccsd.cxx  cholesky-ccsdt.cxx
src/cc/: 1edensity.cxx  1edensity.hpp  2edensity.cxx  2edensity.hpp  Makefile  cc.hpp  cc4.cxx  cc4.hpp  cc4_density.cxx  ccd.cxx  ccd.hpp  ccsd.cxx  ccsd.hpp  ccsd_density.cxx  ccsd_t.cxx  ccsd_t_l.cxx  ccsd_t_n.cxx  ccsd_t_n.hpp  ccsd_t_n_opt.cxx  ccsd_t_n_opt.hpp  ccsd_tq_n.cxx  ccsd_tq_n.hpp  ccsd_tq_n_opt.cxx  ccsd_tq_n_opt.hpp  ccsdipgf.cxx  ccsdipgf.hpp  ccsdt.cxx  ccsdt.hpp  ccsdt_density.cxx  ccsdt_q.cxx  ccsdt_q_density.cxx  ccsdt_q_density.hpp  ccsdt_q_l.cxx  ccsdt_q_l.hpp  ccsdt_q_n.cxx  ccsdt_q_n.hpp  ccsdt_q_n_opt.cxx  ccsdt_q_n_opt.hpp  ccsdtipgf.cxx  ccsdtq.cxx  (+68 more)
src/convergence/: cgdavidson.hpp  complex_linear_krylov.hpp  crop.hpp  davidson.hpp  diis.hpp
src/diis/: diis.hpp
src/frameworks/: agora.hpp  autocc.hpp  convergence.hpp  integrals.hpp  logging.hpp  molecule.hpp  operator.hpp  symmetry.hpp  task.hpp  tensor.hpp  time.hpp  util.hpp
src/frameworks/agora/: agora.hpp
src/frameworks/autocc/: autocc.cxx  autocc.hpp  diagram.cxx  diagram.hpp  fraction.cxx  fraction.hpp  fragment.cxx  line.cxx  (+8 more)
src/input/: Makefile  basis.cxx  basis.hpp  config.cxx  config.hpp  math.cxx  math.hpp  molecule.cxx  molecule.hpp
src/integrals/: 1ehamiltonian.cxx  1ehamiltonian.hpp  1eints.cxx  1eints.hpp  2eints.cxx  2eints.hpp  Makefile  blasx.c  center.cxx  center.hpp  cfour1eints.cxx  cfour1eints.hpp  cfour2eints.cxx  cfour2eints.hpp  cholesky.cxx  cholesky.hpp  context.cxx  context.hpp  element.cxx  element.hpp  elementdata.c  eri.cxx  eri.hpp  fmgamma.c  fmgamma.cxx  fmgamma.hpp  hgp.cxx  hrr.c  internal.h  ishida.cxx  ishida.hpp  ishprim.c  kei.cxx  kei.hpp  keiprim.c  libint2eints.cxx  libint2eints.hpp  moments.cxx  moments.hpp  momprim.c  (+17 more)
src/jellium/: jellium.cxx
src/main/: Makefile  main.cxx
src/make/: Makefile  rules.mk
src/memory/: Makefile  memory.c  memory.h
src/operator/: 1ehamiltonian.cxx  1ehamiltonian.hpp  1eoperator.hpp  2eoperator.cxx  2eoperator.hpp  Makefile  aomoints.cxx  aomoints.hpp  aooperator.hpp  cholesky.cxx  cholesky.hpp  choleskymoints.cxx  choleskymoints.hpp  complexdenominator.hpp  deexcitationoperator.hpp  denominator.hpp  eri.cxx  eri.hpp  excitationoperator.hpp  exponentialoperator.hpp  fakemoints.hpp  fcidump.cxx  fcidump.hpp  kei.cxx  kei.hpp  moints.cxx  moints.hpp  mooperator.hpp  multipole.cxx  multipole.hpp  nai.cxx  nai.hpp  ovi.cxx  ovi.hpp  perturbedst2eoperator.cxx  perturbedst2eoperator.hpp  rhfaomoints.cxx  space.hpp  sparseaomoints.cxx  sparseaomoints.hpp  (+6 more)
src/scf/: Makefile  aoints.cxx  aoints.hpp  aomoints.cxx  aomoints.hpp  aoscf.cxx  aoscf.hpp  aouhf.cxx  aouhf.hpp  cfourscf.cxx  cfourscf.hpp  cholesky.cxx  cholesky.hpp  choleskymoints.cxx  choleskymoints.hpp  choleskyscf.cxx  choleskyscf.hpp  choleskyuhf.cxx  choleskyuhf.hpp  moints.cxx  moints.hpp  scf.cxx  scf.hpp  uhf.cxx  uhf.hpp  uhf_elemental.cxx  uhf_elemental.hpp  uhf_local.cxx  uhf_local.hpp
src/slide/: Makefile  slide.fi  slide.h  slide.hpp
src/stl_ext/: stl_ext.hpp
src/symmetry/: Makefile  symmetry.cxx  symmetry.hpp
src/task/: Makefile  task.cxx  task.hpp  uhftask.hpp
src/tensor/: Makefile  composite_tensor.hpp  compositetensor.hpp  ctf_tensor.cxx  ctf_tensor.hpp  dense_tensor.cxx  dense_tensor.hpp  dist_tensor.cxx  dist_tensor.hpp  indexable_tensor.hpp  indexabletensor.hpp  local_tensor.hpp  packed_tensor.cxx  packed_tensor.hpp  ring.hpp  spinorbital.hpp  spinorbital_tensor.cxx  spinorbital_tensor.hpp  symblocked_tensor.cxx  symblocked_tensor.hpp  symmetry.cxx  symmetry.hpp  tensor.h  tensor.hpp  tensor_densify.c  tensor_mult.c  tensor_mult_dense.c  tensor_pack.c  tensor_print.c  tensor_print_dense.c  tensor_scale.c  tensor_scale_dense.c  tensor_size.c  tensor_size_dense.c  tensor_slice.c  tensor_slice_dense.c  tensor_sum.c  tensor_sum_dense.c  tensor_symmetrize.c  tensor_unpack.c  (+2 more)
src/time/: Makefile  c_time.h  time.cxx  time.hpp
src/util/: Makefile  blas.h  distributed.cxx  distributed.hpp  fortran.h  global.hpp  iterative.hpp  lapack.h  lawrap.hpp  marray.hpp  math.cxx  math.hpp  math_ext.cxx  math_ext.h  math_ext.hpp  stl_ext.hpp  util.h
test/: input.aq  test.sh
test/symmetry/: symmetry.aq
test/tensor_set1/: energies  input.aq
test/tensor_set2/: energies  input.aq
test/tensor_set3/: energies  input.aq
test/water_clusters/: make_input.py  w1.aq  w10.aq  w11i434.aq  w11i4412.aq  w11i443.aq  w11i515.aq  w11i551.aq  w12.aq  w13.aq  w14.aq  w15.aq  w16.aq  w17int.aq  w17surf.aq  w18.aq  w19.aq  w2.aq  w20dode.aq  w20edge.aq  w20face.aq  w20fused.aq  w21.aq  w3.aq  w4.aq  w5.aq  w6book.aq  w6cage.aq  w6cyclic.aq  w6prism.aq  w7.aq  w8d2d.aq  w8s4.aq  w9.aq
(+423 files in other folders)
